--- a/views/header-footer.html
+++ b/views/header-footer.html
@@ -7,19 +7,25 @@
 	<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<title>Navegador</title>
+	<title>Header y Footer</title>
 </head>
 <body>
+	<!-- Navegador-->
     <div class="container" id="header">
 		<div class="pull-left">
-	        <button type="button" class="button-nav" id="home" href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> HOME</button>
+			<div id="nav">
+	        	<button type="button" class="button-nav" id="home" href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> HOME</button>
+	        </div>
 	    </div>
 	    <div class="pull-right">
-	        <button type="button" class="button-nav" id="log" data-toggle="modal" data-target="#formLogModal">Log in</button>
-	       	<button type="button" class="button-nav" id="sign" data-toggle="modal" data-target="#formRegistryModal">Sign in</button>
+	    	<div id="nav">
+		        <button type="button" class="button-nav" id="log" data-toggle="modal" data-target="#formLogModal">Log in</button>
+		       	<button type="button" class="button-nav" id="sign" data-toggle="modal" data-target="#formRegistryModal">Sign in</button>
+		    </div>
 	    </div>
     </div>
 
+    <!--Formulario de registro-->
 	<div class="modal fade" id="formRegistryModal" tabindex="-1" role="dialog" aria-labellendy="formModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -64,6 +70,8 @@
 		</div>
 	</div>
 
+
+		<!--Formulario de log in-->
 	<div class="modal fade" id="formLogModal" tabindex="-1" role="dialog" aria-labellendy="formModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -90,5 +98,10 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Footer-->
+    <div id="footer">
+		<strong>Diseño de Aplicaciones Web 2015</strong>
+    </div>
 </body>
 </html>
