--- a/views/index.html
+++ b/views/index.html
@@ -10,29 +10,15 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
 
-<!--<body>
-<div class="nav">
-    <div class="container">
-        <ul class="pull-left">
-            <li><a href="#">HOME</a></li>
-        </ul>
-        <ul class="pull-right">
-            <li><a href="#">Sign In</a></li>
-            <li><a href="#">Log In</a></li>
-        </ul>
-    </div>
-</div>-->
-
 	<script>
 	$(document).ready(function(){
-	    $("#nav-header").load("navegador.html");
+	    $("#index-headerfooter").load("header-footer.html");
 	});
 	</script>
 </head>
 
 <body>
-	<div id="nav-header"></div>
-
+	<div id="index-headerfooter"></div>
 	<div class="jumbotron">
 	    <div class="container">
 	        <h1>Madrid</h1>
