--- a/views/index.html
+++ b/views/index.html
@@ -12,82 +12,96 @@
 
 	<script>
 	$(document).ready(function(){
-	    $("#index-headerfooter").load("header-footer.html");
+	    $("#load-header").load("header-footer.html #header");
+	    $("#load-registry").load("header-footer.html #formRegistryModal");
+	    $("#load-log").load("header-footer.html #formLogModal");
+	    $("#load-footer").load("header-footer.html #footer")
 	});
 	</script>
 </head>
 
 <body>
-	<div id="index-headerfooter"></div>
-	<div class="jumbotron">
-	    <div class="container">
-	        <h1>Madrid</h1>
+	<div id="wrapper">
+		<!--Cargar el header con los formularios de registro y login del header-footer.html-->
+		<div id="load-header"></div>
+		<div id="load-registry"></div>
+		<div id="load-log"></div>	
 
-	        <p>Descubre. Comparte.</p>
-	        <a href="#">Learn More</a>
-	    </div>
-	</div>
+		<div id="content">
+			<div class="jumbotron">
+			    <div class="container">
+			        <h1>Madrid</h1>
 
-	<div class="neighborhood-guides">
-	    <div class="container">
-	        <h2>Lo que necesitas saber</h2>
+			        <p>Descubre. Comparte.</p>
+			        <a href="#">Learn More</a>
+			    </div>
+			</div>
 
-	        <p>Algún texto que ahora mismo no se me ocurre, pero se me ocurrirá.</p>
+			<div class="neighborhood-guides">
+			    <div class="container">
+			        <h2>Lo que necesitas saber</h2>
 
-	        <div class="row">
-	            <div class="col-md-4">
-	                <div class="thumbnail">
-	                    <img src="../static/oso.jpg">
-	                    <h3>Vida nocturna</h3>
-	                    <p>blablabla</p>
-	                    <p><a href="#">Los lugares secretos para salir</a></p>
-	                </div>
-	            </div>
-	            <div class="col-md-4">
-	                <div class="thumbnail">
-	                    <img src="../static/granvia.jpg">
-	                     <h3>Turismo</h3>
-	                    <p>blablablabla</p>
-	                    <p><a href="#">Más allá del Palacio Real</a></p>
-	                </div>
-	            </div>
-	            <div class="col-md-4">
-	                <div class="thumbnail">
-	                    <img src="../static/tiopepe.jpg">
-	                    <h3>Gastronomía</h3>
-	                    <p>minguitogay</p>
-	                    <p><a href="#">Tapas y cañas</a></p>
-	                </div>
-	            </div>
-	        </div>
-	    </div>
-	</div>
-	<div class="learn-more">
-	    <div class="container">
-	        <div class="row">
-	            <div class="col-md-4">
-	                <h3>Vida nocturna</h3>
+			        <p>Algún texto que ahora mismo no se me ocurre, pero se me ocurrirá.</p>
 
-	                <p>blablabla</p>
+			        <div class="row">
+			            <div class="col-md-4">
+			                <div class="thumbnail">
+			                    <img src="../static/oso.jpg">
+			                    <h3>Vida nocturna</h3>
+			                    <p>blablabla</p>
+			                    <p><a href="#">Los lugares secretos para salir</a></p>
+			                </div>
+			            </div>
+			            <div class="col-md-4">
+			                <div class="thumbnail">
+			                    <img src="../static/granvia.jpg">
+			                     <h3>Turismo</h3>
+			                    <p>blablablabla</p>
+			                    <p><a href="#">Más allá del Palacio Real</a></p>
+			                </div>
+			            </div>
+			            <div class="col-md-4">
+			                <div class="thumbnail">
+			                    <img src="../static/tiopepe.jpg">
+			                    <h3>Gastronomía</h3>
+			                    <p>minguitogay</p>
+			                    <p><a href="#">Tapas y cañas</a></p>
+			                </div>
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="learn-more">
+			    <div class="container">
+			        <div class="row">
+			            <div class="col-md-4">
+			                <h3>Vida nocturna</h3>
 
-	                <p><a href="#">Los lugares secretos para salir</a></p>
-	            </div>
-	            <div class="col-md-4">
-	                <h3>Turismo</h3>
+			                <p>blablabla</p>
 
-	                <p>blablablabla</p>
+			                <p><a href="#">Los lugares secretos para salir</a></p>
+			            </div>
+			            <div class="col-md-4">
+			                <h3>Turismo</h3>
 
-	                <p><a href="#">Más allá del Palacio Real</a></p>
-	            </div>
-	            <div class="col-md-4">
-	                <h3>Gastronomía</h3>
+			                <p>blablablabla</p>
 
-	                <p>minguitogay</p>
+			                <p><a href="#">Más allá del Palacio Real</a></p>
+			            </div>
+			            <div class="col-md-4">
+			                <h3>Gastronomía</h3>
 
-	                <p><a href="#">Tapas y cañas</a></p>
-	            </div>
-	        </div>
-	    </div>
+			                <p>minguitogay</p>
+
+			                <p><a href="#">Tapas y cañas</a></p>
+			            </div>
+			        </div>
+			    </div>
+			</div>
+		</div>
+
+		<!--Cargar el footer del header-footer.html-->
+		<div id="load-footer"></div>
 	</div>
 </body>
 </html>
