--- a/static/style.css
+++ b/static/style.css
@@ -12,28 +12,31 @@ html, body{
 body > #container { height: auto; min-height: 100%; }
 #content { padding-bottom: 3em; }
 
-.jumbotron {
+#content .jumbotron {
   background-image: url('./cibeles.jpg');
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-bottom: 0px
 }
 
 .jumbotron .container {
   position: relative;
   top: 25px;
+  width: 1000px
 }
 
-.jumbotron h1 {
-  color: #fff;
+.jumbotron .container h1 a{
+  color: Black;
   font-size: 48px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
 
-.jumbotron p {
+.jumbotron .container p {
   font-size: 20px;
-  color: #fff;
+  color: Black;
+  margin-bottom: 7px
 }
 
 #eventExample{
@@ -55,7 +58,7 @@ body > #container { height: auto; min-height: 100%; }
 }
 
 .neighborhood-guides {
-    background-color: #efefef;
+    background-color: #F7F3E8;
     border-bottom: 1px solid #dbdbdb;
 }
 
