--- a/views/index.html
+++ b/views/index.html
@@ -30,70 +30,44 @@
 		<div id="content">
 			<div class="jumbotron">
 			    <div class="container">
-			        <h1>Madrid</h1>
+			        <h1><a href="#">erasmusMadrid</h1>
 
-			        <p>Descubre. Comparte.</p>
-			        <a href="#">Learn More</a>
+			        <p>Descubre, Comparte, Disfruta</p>
+			        <a href="#">Aprende más</a>
 			    </div>
 			</div>
 
 			<div class="neighborhood-guides">
 			    <div class="container">
-			        <h2>Lo que necesitas saber</h2>
+			        <h2>Portal de eventos en Madrid</h2>
 
-			        <p>Algún texto que ahora mismo no se me ocurre, pero se me ocurrirá.</p>
+			        <p>Mantente atento de todas las actividades disponibles y actualizadas en todo momento en la ciudad de Madrid</p>
+			 		<p>¿A qué estás esperando?</p>
 
 			        <div class="row">
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="../static/oso.jpg">
+			                    <img src="../static/night.jpg">
 			                    <h3>Vida nocturna</h3>
-			                    <p>blablabla</p>
-			                    <p><a href="#">Los lugares secretos para salir</a></p>
+			                    <p>Deja que la noche te confunda</p>
+			                    <p><a href="#">Fiestas sorprendentes</a></p>
 			                </div>
 			            </div>
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="../static/granvia.jpg">
+			                    <img src="../static/debod.jpg">
 			                     <h3>Turismo</h3>
-			                    <p>blablablabla</p>
-			                    <p><a href="#">Más allá del Palacio Real</a></p>
+			                    <p>Saca tu lado culto</p>
+			                    <p><a href="#">Lugares turísticos</a></p>
 			                </div>
 			            </div>
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="../static/tiopepe.jpg">
+			                    <img src="../static/tio-pepe.jpg">
 			                    <h3>Gastronomía</h3>
-			                    <p>minguitogay</p>
+			                    <p>Aprende de la dieta mediterránea</p>
 			                    <p><a href="#">Tapas y cañas</a></p>
 			                </div>
-			            </div>
-			        </div>
-			    </div>
-			</div>
-			<div class="learn-more">
-			    <div class="container">
-			        <div class="row">
-			            <div class="col-md-4">
-			                <h3>Vida nocturna</h3>
-
-			                <p>blablabla</p>
-
-			                <p><a href="#">Los lugares secretos para salir</a></p>
-			            </div>
-			            <div class="col-md-4">
-			                <h3>Turismo</h3>
-
-			                <p>blablablabla</p>
-
-			                <p><a href="#">Más allá del Palacio Real</a></p>
-			            </div>
-			            <div class="col-md-4">
-			                <h3>Gastronomía</h3>
-
-			                <p>minguitogay</p>
-
-			                <p><a href="#">Tapas y cañas</a></p>
 			            </div>
 			        </div>
 			    </div>
