Lista de eventos actualizada

--- a/views/beerpongChallenge.html
+++ b/views/beerpongChallenge.html
@@ -53,9 +53,15 @@
                 
               </div>
             </div>  
-
+            
             <div class="col-md-7">
-              <div class="thumbnail">  
+              <div class="thumbnail"> 
+              <div id="datepicker"></div> 
+              <script type="text/javascript">
+              $( "#datepicker" ).datepicker({
+                  inline: true
+              });
+              </script>
                 <img src="../static/beerpong.jpg" style="width:600px;height:380px;">   
                 <p></p>
                 <p></p>
