listo para los pantallazos

--- a/static/style.css
+++ b/static/style.css
@@ -230,3 +230,10 @@ body > #container { height: auto; min-height: 100%; }
     .tfclear{
         clear:both;
     }
+
+/*style de evento.html*/
+#descImg{
+  padding-top: 20px;
+}
+
+/*FIN style de evento.html*/
