--- a/views/listaEventos.html
+++ b/views/listaEventos.html
@@ -94,7 +94,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
                 <h4><div id="14270474947718" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></h4>
                 <p>Disfruta de una visita guiada gratuita por el Madrid de los Austrias y los Borbones, en castellano y en inglés, todos los sábados y domingos a las 11 frente al oso y el madroño.</p>
                  <p>Enjoy a free tour around the royal Madrid, in English and Spanish, every saturday and sanday at 11 in front of the oso y el madroño statue.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="#">Ver evento  <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
@@ -112,7 +112,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
                 <h3>Visita Aranjuez</h3>
                 <h4><div id="14270474947716" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:41" type="text/javascript"></script></h4>
                 <p>Seguimos conociendo los alrededores más bonitos de Madrid, en esta ocasión visita guiada a Aranjuez y Chinchón, Sábado 11 de Abril, 19 euros transporte incluido, quedamos a las 9:00 en la estación de Atocha.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
@@ -130,7 +130,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
                 <h3>Bravas y Cerves</h3>
                 <h4><div id="14270474947716" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947716:3:000000:41" type="text/javascript"></script></h4>
                 <p>Disfruta de la tapa más famosa de Madrid acompañada de otros estudiantes de Erasmus con los que podrás practicar el Castellano y otros idiomas, todos los Martes a las 19:00 casa Pepe.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
@@ -148,7 +148,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
                 <h3>Erasmus Party</h3>
                 <h4><div id="14270474947716" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947716:3:000000:41" type="text/javascript"></script></h4>
                 <p>Ven a la fiesta Erasmus más diverdida de Madrid, todos los lunes y miércoles en la sala Joy, Madrid... nunca duerme.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
