ligero cambio en el header
poniéndolo así, al minimizar la ventana el header no se ensancha

--- a/views/header-footer.html
+++ b/views/header-footer.html
@@ -12,13 +12,13 @@
 <body>
 	<!-- Navegador-->
     <div class="container" id="header">
-		<div class="pull-left">
-			<div id="nav">
+		<div>
+			<div class="pull-left" id="nav">
 	        	<button type="button" class="button-nav" id="home" href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> HOME</button>
 	        </div>
 	    </div>
-	    <div class="pull-right">
-	    	<div id="nav">
+	    <div>
+	    	<div class="pull-right" id="nav">
 		        <button type="button" class="button-nav" id="log" data-toggle="modal" data-target="#formLogModal">Log in</button>
 		       	<button type="button" class="button-nav" id="sign" data-toggle="modal" data-target="#formRegistryModal">Sign in</button>
 		    </div>
