--- a/views/evento.html
+++ b/views/evento.html
@@ -4,19 +4,17 @@
 <head>
 
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/style.css">
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/style.css">
+    <script src="/static/jquery.js"></script>
+    <script src="/static/bootstrap.min.js"></script>
     <meta charset="UTF-8">
 
     <script>
       $(document).ready(function(){
-        $("#load-header").load("header-footer.html #header");
-        $("#load-registry").load("header-footer.html #formRegistryModal");
-        $("#load-log").load("header-footer.html #formLogModal");
-        $("#load-footer").load("header-footer.html #footer")
+        $("#load-header").load("/header-footer.html #header");
+        $("#load-registry").load("/header-footer.html #formRegistryModal");
+        $("#load-log").load("/header-footer.html #formLogModal");
+        $("#load-footer").load("/header-footer.html #footer")
       });
     </script>
 
@@ -64,7 +62,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="../static/bpong.jpg" alt="">
+                <img class="img-responsive" src="/static/bpong.jpg" alt="">
             </div>
 
             <div class="col-md-4">
@@ -91,25 +89,25 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="../static/bpong1.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="/static/bpong1.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="../static/bpong2.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="/static/bpong2.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="../static/bpong3.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="/static/bpong3.jpg" alt="">
                 </a>
             </div>
 
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
-                    <img class="img-responsive portfolio-item" src="../static/bpong4.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="/static/bpong4.jpg" alt="">
                 </a>
             </div>
 
