--- a/views/index.html
+++ b/views/index.html
@@ -4,18 +4,18 @@
 <head>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/style.css">
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/style.css">
+    <link href="/static/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/jquery.js"></script>
+    <script src="/static/bootstrap.min.js"></script>
     <meta charset="UTF-8">
 
 	<script>
 	$(document).ready(function(){
-	    $("#load-header").load("header-footer.html #header");
-	    $("#load-registry").load("header-footer.html #formRegistryModal");
-	    $("#load-log").load("header-footer.html #formLogModal");
-	    $("#load-footer").load("header-footer.html #footer")
+	    $("#load-header").load("/header-footer.html #header");
+	    $("#load-registry").load("/header-footer.html #formRegistryModal");
+	    $("#load-log").load("/header-footer.html #formLogModal");
+	    $("#load-footer").load("/header-footer.html #footer")
 	});
 	</script>
 </head>
@@ -47,7 +47,7 @@
 			        <div class="row">
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="../static/night.jpg">
+			                    <img src="/static/night.jpg">
 			                    <h3>Vida nocturna</h3>
 			                    <p>Deja que la noche te confunda</p>
 			                    <p><a href="#">Fiestas sorprendentes</a></p>
@@ -55,7 +55,7 @@
 			            </div>
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="../static/debod.jpg">
+			                    <img src="/static/debod.jpg">
 			                     <h3>Turismo</h3>
 			                    <p>Saca tu lado culto</p>
 			                    <p><a href="#">Lugares turísticos</a></p>
@@ -63,7 +63,7 @@
 			            </div>
 			            <div class="col-md-4">
 			                <div class="thumbnail">
-			                    <img src="../static/tio-pepe.jpg">
+			                    <img src="/static/tio-pepe.jpg">
 			                    <h3>Gastronomía</h3>
 			                    <p>Aprende de la dieta mediterránea</p>
 			                    <p><a href="#">Tapas y cañas</a></p>
