--- a/views/listaEventos.html
+++ b/views/listaEventos.html
@@ -4,24 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/1-col-portfolio.css" rel="stylesheet">
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/style.css">
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/style.css">
+    <link href="/static/bootstrap.min.css" rel="stylesheet">
+    <script src="/static/jquery.js"></script>
+    <script src="/static/bootstrap.min.js"></script>
     <meta charset="UTF-8">
 
     <script>
     $(document).ready(function(){
-        $("#load-header").load("header-footer.html #header");
-        $("#load-registry").load("header-footer.html #formRegistryModal");
-        $("#load-log").load("header-footer.html #formLogModal");
-        $("#load-footer").load("header-footer.html #footer")
+        $("#load-header").load("/header-footer.html #header");
+        $("#load-registry").load("/header-footer.html #formRegistryModal");
+        $("#load-log").load("/header-footer.html #formLogModal");
+        $("#load-footer").load("/header-footer.html #footer")
     });
     </script>
 
@@ -67,7 +62,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="../static/bp1.jpg" style="width:653px;height:280px;">
+                    <img src="/static/bp1.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -86,7 +81,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="../static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
+                    <img src="/static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -105,7 +100,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="../static/AranjuezTour.jpg" style="width:653px;height:280px;">
+                    <img src="/static/AranjuezTour.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -123,7 +118,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="../static/Bravas.jpg" style="width:653px;height:280px;">
+                    <img src="/static/Bravas.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -141,7 +136,7 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img src="../static/fiesta erasmus.jpg" style="width:653px;height:280px;">
+                    <img src="/static/fiesta erasmus.jpg" style="width:653px;height:280px;">
                 </a>
             </div>
             <div class="col-md-5">
@@ -195,14 +190,6 @@ Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universita
         </footer>
 
     <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 </div>
-
 </body>
-
 </html>
