--- a/static/style.css
+++ b/static/style.css
@@ -382,33 +382,62 @@ body > #container {
   border-bottom: 2px solid #77BED2;
 }
 
-#configMenu{
-  display: none;
+.menu {
+  background: #202024 url('./fondo_menu.jpg') repeat left top;
+  left: -285px;  /* start off behind the scenes */
+  height: 100%;
+  position: fixed;
+  width: 285px;
 }
 
-#configTitle{
-  padding-left: 40px;
-}
-
-#configOptions ul{
+.menu ul {
+  border-top: 1px solid #636366;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-#profileEvents{
-  padding-left: 40px;
+.menu li {
+  border-bottom: 1px solid #636366;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 45px;
+  padding-bottom: 3px;
+  padding-left: 20px;
+  padding-top: 3px;
 }
 
-#ownEvents{
-  /*display: none;*/
+.menu a {
+  color: #fff;
+  font-size: 15px;
+  text-decoration: none;
+  text-transform: uppercase;
 }
+
+.icon-close {
+  cursor: pointer;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+
+
+
+
+body { /*este selector sólo debería afectar el body del perfil*/
+  left: 0;
+  margin: 0;
+  overflow: hidden;
+  position: relative;
+}
+
+
+
+
+
 
 .glyphicon{
   cursor: pointer;
 }
-
-/*input {
-  width: 250px;
-}*/
 
 .fb-profile img.fb-image-lg{
     z-index: 0;
