--- a/static/style.css
+++ b/static/style.css
@@ -391,14 +391,14 @@ body > #container {
 }
 
 .menu ul {
-  border-top: 1px solid #636366;
+  border-top: 1px solid #fff;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
 .menu li {
-  border-bottom: 1px solid #636366;
+  border-bottom: 1px solid #fff;
   font-family: 'Open Sans', sans-serif;
   line-height: 45px;
   padding-bottom: 3px;
@@ -407,7 +407,7 @@ body > #container {
 }
 
 .menu a {
-  color: #fff;
+  color: #636366;
   font-size: 15px;
   text-decoration: none;
   text-transform: uppercase;
@@ -422,13 +422,14 @@ body > #container {
 
 
 
-
+/*
 body { /*este selector sólo debería afectar el body del perfil*/
-  left: 0;
+  /*left: 0;
   margin: 0;
   overflow: hidden;
   position: relative;
 }
+*/
 
 
 
