--- a/static/style.css
+++ b/static/style.css
@@ -335,7 +335,7 @@ body > #container {
         text-decoration: none;
         color: #ffffff;
         border: solid 1px #0076a3; border-right:0px;
-        background: #0095cd;
+        background: #77bed2;
         background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
         background: -moz-linear-gradient(top,  #00adee,  #0078a5);
         border-top-right-radius: 5px 5px;
