--- a/static/style.css
+++ b/static/style.css
@@ -438,13 +438,14 @@ body > #container {
 }
 
 .menu {
-  background-image: url('./fondo_menu.jpg');
+  /*background-image: url('./fondo_menu.jpg');*/
+  background-color: #77BED2;
   background-size: cover;
   background-repeat: no-repeat;
-  left: -285px;  /* start off behind the scenes */
+  left: -380px;  /* start off behind the scenes */
   height: 100%;
   position: fixed;
-  width: 285px;
+  width: 380px;
   z-index: 2;
 }
 
@@ -461,9 +462,31 @@ body > #container {
   line-height: 45px;
   padding-bottom: 3px;
   padding-left: 20px;
-  padding-top: 3px;
 }
 
+.form-group .perfil-guardar-foto {
+  margin-left: 130px;
+}
+
+.form-group .perfil-guardar-usuario {
+  margin-left: 87px;
+}
+.form-group #usuario-perfil {
+  width: 346px;
+}
+
+.form-group .perfil-guardar-password {
+  margin-left: 143px;
+}
+.form-group #password-perfil {
+  width: 346px;
+}
+.form-group .perfil-guardar-mail {
+  margin-left: 182px;
+}
+.form-group #mail-perfil {
+  width: 346px;
+}
 .menu a {
   color: #636366;
   font-size: 15px;
