--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-
 html, body{ 
   margin:0;
   padding:0;
@@ -85,11 +84,6 @@ body > #container {
   text-shadow: 0 1px 8px rgba(0, 0, 0, 0.6);
   text-decoration: underline;
 }
-/*
-#eventExample{
-  padding-top: 60px;
-}
-*/
 
 .learn-more {
   background-color: #f7f7f7;
@@ -216,6 +210,60 @@ body > #container {
 #startEvents{
   opacity: 0;
 }
+
+
+/*Tabla para mostrar la fecha con el calendario de fondo*/
+.dateImg{
+  background-image: url(./calendarIcon.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.year{
+  height: 30px;
+}
+
+.year td{
+  padding-top: 25px;
+  font-family: fantasy;
+}
+
+.day{
+  height: 60px;
+}
+
+.day td{
+  font-size: 50px;
+}
+
+.month{
+  height: 30px;
+}
+
+.month td{
+  padding-bottom: 10px;
+}
+/***************/
+
+.dateMssg{
+  float: right;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+
+  text-align: center;
+  font-size:2.8em;
+
+}
+
+/*
+.oculto{
+  opacity: 0;
+}
+*/
 
 #content { 
   padding-bottom: 20px;
